<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lnrLSongNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/txtvwSongId"
            android:text="@string/txtvw_song"
            style="@style/nikoTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/txtvwPlayingSongNameId"
            android:text="@string/txtvw_song_name"
            style="@style/nikoTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <View
        android:id="@+id/vwTwoId"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="3dp"
        android:layout_below="@id/lnrLSongNameId"
        android:background="#0000FF" />

    <LinearLayout
        android:id="@+id/lnrLCtrlBtnsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vwTwoId"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <Button
            android:id="@+id/btnStopId"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:background="@drawable/new_btn_detener"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <Button
            android:id="@+id/btnPreviousId"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/new_btn_previa"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <Button
            android:id="@+id/btnPlayId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/new_btn_tocar"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <Button
            android:id="@+id/btnNextId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/new_btn_next"/>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <Button
            android:id="@+id/btnPauseId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/new_btn_pausa" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#0000FF"/>

        <Button
            android:id="@+id/btnLoopId"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/new_btn_loop"
            android:enabled="true"/>

    </LinearLayout>

    <View
        android:id="@+id/vwCuatroId"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="3dp"
        android:layout_below="@id/lnrLCtrlBtnsId"
        android:background="#0000FF" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vwCuatroId"
        android:layout_above="@+id/vwSieteId"
        android:layout_marginTop="4dp"
        android:padding="3dp"
        android:background="@drawable/border"
        android:choiceMode="singleChoice" >
    </ListView>

    <View
        android:id="@+id/vwSieteId"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="3dp"
        android:layout_above="@+id/rltveLTxtTimeId"
        android:background="#0000FF" />

    <RelativeLayout
        android:id="@+id/rltveLTxtTimeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_above="@+id/vwCincoId"
        android:background="@drawable/border">

        <SeekBar
            android:id="@+id/seekBId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:progressDrawable="@layout/progreso"
            android:thumb="@layout/thumb" />

        <TextView
            android:id="@+id/txtvwSongCurrentTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBId"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:text="@string/ma_prog_min"
            style="@style/nikoTextSize"/>

        <TextView
            android:id="@+id/txtvwSongTotalTimeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBId"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:text="@string/ma_prog_max"
            style="@style/nikoTextSize"/>

    </RelativeLayout>

    <View
        android:id="@+id/vwCincoId"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="4dp"
        android:layout_above="@+id/lnrLVolId"
        android:background="#0000FF" />

    <LinearLayout
        android:id="@+id/lnrLVolId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_above="@+id/vwSeisId"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <Button
            android:id="@+id/btnRadioId"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_mw_corner"
            android:text="@string/ma_prog_radio"
            android:textColor="#00FF00"
            android:textSize="18sp"/>


        <Button
            android:id="@+id/btnMusLibId"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ma_prog_lib"
            android:textColor="#00FF00"
            android:textSize="18sp"
            android:background="@drawable/button_mw_corner"/>


        <Button
            android:id="@+id/btnSoundEqualizerId"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background ="@drawable/equaloff"
            android:text="@string/ma_prog_off"
            android:textColor="#00FF00"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:id="@+id/vwSeisId"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="#0000FF" />

</RelativeLayout>
